# shows

./: CHANGELOG.md  README.md  RELEASE_NOTES.md  REQUIREMENTS.md  index.html  package.json
.github/workflows/: release.yml
docs/: macos-signing.md
src/: App.tsx  api.ts  bindings.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_set_group.sql  003_split_b2b_artists.sql  004_add_end_date.sql  005_add_cancelled.sql  006_add_genre.sql  007_add_artist_metadata.sql  008_add_disambiguation.sql  009_add_mbid.sql  010_add_artist_links.sql  011_add_setlist_cache.sql  013_event_images.sql  015_media_captured_at.sql  016_add_notes.sql  017_add_friends.sql  018_user_curated_tags.sql  019_seed_common_tags.sql
src-tauri/src/: lib.rs  main.rs  metadata.rs  updater.rs  util.rs
src-tauri/src/commands/: backup.rs  changelog.rs  entities.rs  events.rs  export.rs  genres.rs  images.rs  import.rs  links.rs  maintenance.rs  media.rs  mod.rs  query.rs  setlists.rs  settings.rs  stats.rs  tags.rs  theme.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  tags.rs
src-tauri/tests/: generate_bindings.rs
src/components/: ActionsMenu.tsx  ArtistTagEditor.tsx  Autocomplete.tsx  BackButton.tsx  ChangelogDialog.tsx  CommandPalette.tsx  CommonTagsSettings.tsx  CsvPreviewDialog.tsx  EditableName.tsx  EntityImagesSection.tsx  EntityLink.tsx  EntityMediaSection.tsx  EventDetail.tsx  EventFilterBar.tsx  EventForm.tsx  EventsTable.tsx  Logo.tsx  (+14 more)
(+24 files in other folders)
